...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash2"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button_employer"
        android:layout_width="237dp"
        android:layout_height="67dp"
        android:background="#215CF3"
        android:gravity="center"
        android:text="Employer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash2"
        app:layout_constraintVertical_bias="0.654" />

    <Button
...
