...
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:cornerRadius="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash"
        app:layout_constraintVertical_bias="0.905" />

    <Button
...
